--- a/css/style.css
+++ b/css/style.css
@@ -43,33 +43,41 @@ body {
   height: 75px;
   background: transparent;
   cursor: pointer;
-}
-.material-btn.active:before {
-  transform: scale(18);
-}
-@media (min-height: 800px) {
-  .material-btn.active:before {
-    transform: scale(25);
+  
+  &.active {
+    
+    &:before {
+      transform: scale(18);
+      
+      @media (min-height: 800px) {
+        transform: scale(25);
+      }
+    }
   }
-}
-.material-btn:active:before {
-  opacity: 0.75;
-}
-.material-btn:before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  width: 75px;
-  height: 75px;
-  background: white;
-  border-radius: 50%;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
-  cursor: pointer;
-  transform-origin: center 70%;
-  transform: scale(1);
-  transition: all 0.35s ease-out;
+  
+  &:active {
+    
+    &:before {
+      opacity: 0.75;
+    }
+  }
+  
+  &:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    width: 75px;
+    height: 75px;
+    background: white;
+    border-radius: 50%;
+    box-shadow: 0 5px 10px rgba(black, 0.5);
+    cursor: pointer;
+    transform-origin: center 70%;
+    transform: scale(1);
+    transition: all 0.35s ease-out;
+  }
 }
 
 .material-content {
@@ -80,65 +88,70 @@ body {
   right: 0;
 }
 
-nav ul {
-  list-style-type: none;
-  padding: 0;
-  text-align: right;
-}
-nav li {
-  will-change: transform, opacity;
-  margin: 25px 0;
-  transform: translateY(100px);
-  opacity: 0;
-  transition: all 0.4s ease-out;
-}
-nav li.active {
-  transform: translateY(0);
-  opacity: 1;
-}
-nav li:nth-child(1) {
-  transition-delay: 0.1s;
-}
-nav li:nth-child(2) {
-  transition-delay: 0.2s;
-}
-nav li:nth-child(3) {
-  transition-delay: 0.3s;
-}
-nav li:nth-child(4) {
-  transition-delay: 0.4s;
-}
-nav a {
-  text-decoration: none;
-  font-size: 5vw;
-  color: tomato;
-  font-weight: 300;
+nav {
+  
+  ul {
+    list-style-type: none;
+    padding: 0;
+    text-align: right;
+  }
+  
+  li {
+    will-change: transform, opacity;
+    margin: 25px 0;
+    transform: translateY(100px);
+    opacity: 0;
+    transition: all 0.4s ease-out;
+    
+    &.active {
+      transform: translateY(0);
+      opacity: 1;
+    }
+  }
+  
+  @for $i from 1 through 4 {
+    li:nth-child(#{$i}) {
+      transition-delay: $i * .1s;
+    }
+  }
+  
+  a {
+    text-decoration: none;
+    font-size: 5vw;
+    color: tomato;
+    font-weight: 300;
+  }
 }
 
 .material-hamburger {
-  transition: all .3s ease-out;
-}
-.material-hamburger .material-patty {
-  will-change: transform, opacity;
-  width: 32px;
-  height: 3px;
-  margin: 0 0 6px 0;
-  background: #333333;
-  opacity: 1;
-  transform: translate(0) rotate(0deg);
-  transition: all .2s ease-out;
-}
-.material-hamburger .material-patty:last-child {
-  margin-bottom: 0;
-}
-.material-hamburger.material-close {
-  transform: rotate(-180deg);
-}
-.material-hamburger.material-close .material-patty:nth-child(1) {
-  transform: translate(-10px, 4px) rotate(-45deg) scale(0.5, 1);
-}
-.material-hamburger.material-close .material-patty:nth-child(3) {
-  transform: translate(-10px, -4px) rotate(45deg) scale(0.5, 1);
+	transition: all .3s ease-out;
+
+	.material-patty {
+		will-change: transform, opacity;
+		width: 32px;
+		height: 3px;
+		margin: 0 0 6px 0;
+		background: lighten(black, 20);
+		opacity: 1;
+		transform: translate(0) rotate(0deg);
+		transition: all .2s ease-out;
+
+		&:last-child {
+			margin-bottom: 0;
+		}
+	}
+
+	&.material-close {
+    transform: rotate(-180deg);
+		
+		.material-patty:nth-child(1) {
+			transform: translate(-10px, 4px) rotate(-45deg) scale(0.5, 1);
+		}
+
+		.material-patty:nth-child(3) {
+			transform: translate(-10px, -4px) rotate(45deg) scale(0.5, 1);
+		}
+	}
 }
 
 main {
@@ -148,18 +161,21 @@ main {
   padding: 10vw;
   overflow: hidden;
   transition: all .35s ease-out;
-}
-main.active {
-  opacity: 0;
-  transform: translate(-700px, 0px);
-}
-main p {
-  color: white;
-  font-size: 4vw;
-  font-weight: 300;
-}
-main p .highlight {
-  background: white;
-  color: tomato;
-  font-size: 4vw;
+  
+  &.active {
+    opacity: 0;
+    transform: translate(-700px, 0px);
+  }
+  
+  p {
+    color: white;
+    font-size: 4vw;
+    font-weight: 300;
+    
+    .highlight {
+      background: white;
+      color: tomato;
+      font-size: 4vw;
+    }
+  }
 }
