--- a/EX3/css/style.css
+++ b/EX3/css/style.css
@@ -151,7 +151,7 @@
 	width: 24px;
 	height: 24px;
 	display: inline-block;
-	background: url(https://img.alicdn.com/tfs/TB1vQzVOVXXXXX4XpXXXXXXXXXX-220-1170.png);
+	background-image: url(https://img.alicdn.com/tfs/TB1vQzVOVXXXXX4XpXXXXXXXXXX-220-1170.png); 
 	background-repeat: no-repeat;
 }
 
