--- a/EX3/css/style.css
+++ b/EX3/css/style.css
@@ -38,9 +38,21 @@
 	float: left;
 }
 
-.notice-title a {
+.notbar:link{
 	text-decoration: none;
-	color: gray;
+}
+
+.notbar:visited{
+
+}
+
+.notbar:hover{
+	text-decoration: underline;
+	color: orange;
+}
+
+.notbar:active {
+
 }
 
 .notice-body {
@@ -81,7 +93,7 @@
 #img {
 	width: 75px;
 	height: 75px;
-	background-color: #fc3906;
+	background-color: #f3c038;
 	margin-top: 10px;
 	margin-bottom: 10px;
 	margin-left: 15px;
@@ -112,19 +124,53 @@
 }
 
 .button {
-	width: 87px;
-	height: 25px;
-	background-color: #fc3906;
 	text-align: center;
-	line-height: 25px;
+	line-height: 15px;
 	float: left;
-	margin-left: 9px;
+	margin-left: 10px;
 }
 
-.button a {
-	text-decoration: none;
-	font-size: 12px;
-	color: white;
+.btn {
+	margin-left: 5px;
+	background-color: #f3c038;
+	padding-top:7px; 
+	padding-bottom:7px; 
+	padding-left: 20px;
+	padding-right: 20px;
+	position:relative; 
+	font-size:12px; 
+	text-decoration:none; 
+	color: white; 
+	box-shadow: inset 0px 1px 0px #fae767, 0px 6px 0px #fc8806;
+	border-radius: 5px;
+}
+
+.btn:before {
+	background-color:gray; 
+	content:""; 
+	display:block; 
+	position:absolute; 
+	width:100%; 
+	height:100%; 
+	padding-left:2px; 
+	padding-right:2px; 
+	padding-bottom:4px; 
+	left:-2px; 
+	top:5px; 
+	z-index:-1; 
+	border-radius: 6px;
+	box-shadow: 0px 1px 0px white;
+}
+
+.btn:active {
+	text-shadow: 0px 1px 1px gray; 
+	background: #f4c038; 
+	box-shadow: inset 0px 1px 0px #fae767, inset 0px -1px 0px #fc8806; 
+	top:7px;
+}
+
+.btn:active:before {
+	top:-2px;
 }
 
 .text {
