--- a/EX3/css/style.css
+++ b/EX3/css/style.css
@@ -7,25 +7,20 @@
 
 .notice {
 	width: 300px;
-	height: 120px;
 	position: relative;
 	border: 1px solid #eaeaea;
 	border-bottom: none;
 }
 
 .notice-head {
-	height: 24px;
-	padding-left: 6px;
-	padding-right: 6px;
-	padding-top: 0px;
-	padding-bottom: 0px;
-	margin-top: 5px;
-	margin-bottom: 5px;
+	height: 26px;
+	padding: 0px;
+	margin: 0px;
 	list-style: none;
 	overflow: hidden;
 }
 
-.notice-title {
+/*.notice-title {
 	width: 45px;
 	padding-left: 6px;
 	padding-right: 6px;
@@ -36,6 +31,17 @@
 	line-height: 22px;
 	font-size: 12px;
 	float: left;
+}*/
+
+.notbar {
+	display: block;
+	background-color: lightgray;
+	box-sizing: border-box;
+	width: 20%;
+	text-align: center;
+	float: left;
+	font-size: 12px;
+	line-height: 26px;
 }
 
 .notbar:link{
@@ -47,7 +53,9 @@
 }
 
 .notbar:hover{
-	text-decoration: underline;
+	background-color: transparent;
+	font-size: 13px;
+	font-weight: bold;
 	color: orange;
 }
 
@@ -64,16 +72,15 @@
 	height: 70px;
 	padding-left: 15px;
 	padding-right: 15px;
-	margin-top: 10px;
-	margin-bottom: 10px;
+	display: inline-block;
+	vertical-align: middle;
 }
 
 .notice-info li {
 	height: 25px;
 	width: 265px;
 	border: 1px solid #eaeaea;
-	margin-top: 5px;
-	margin-bottom: 7px;
+	display: inline-block;
 	text-align: center;
 	list-style: none;
 }
@@ -106,7 +113,7 @@
 	float: left;
 }
 
-.user-info {
+/*.user-info {
 	width: 180px;
 	height: 25px;
 	margin-top: 10px;
@@ -115,6 +122,22 @@
 	border: 1px solid #eaeaea;
 	position: relative;
 	float: left;
+}*/
+
+#userinfo {
+	width: 180px;
+	height: 20px;
+	margin-top: 9px;
+	margin-left: 10px;
+	margin-bottom: 0px;
+	/*border: 1px solid #eaeaea;*/
+	position: relative;
+	float: left;
+	color: gray;
+}
+
+input:focus {
+	background-color: lightgray;
 }
 
 .user-button {
@@ -229,6 +252,12 @@
 	text-decoration: none;
 	color: #bbbbbb;
 	line-height: 18px;
+}
+
+.icon a:hover > p {
+	font-size: 13px;
+	font-weight: bold;
+	color: orange;
 }
 
 .icon a span {
