--- a/css/style.css
+++ b/css/style.css
@@ -87,7 +87,7 @@ nav ul {
 }
 nav li {
   will-change: transform, opacity;
-  margin: 25px 0;
+  margin: 10px 0;
   transform: translateY(100px);
   opacity: 0;
   transition: all 0.4s ease-out;
@@ -108,18 +108,24 @@ nav li:nth-child(3) {
 nav li:nth-child(4) {
   transition-delay: 0.4s;
 }
+nav li:nth-child(5) {
+  transition-delay: 0.5s;
+}
+nav li:nth-child(6) {
+  transition-delay: 0.6s;
+}
 nav a {
   text-decoration: none;
-  font-size: 5vw;
+  font-size: 4vw;
   color: tomato;
-  font-weight: 300;
+  font-weight: 200;
 }
 
 nav .task{
   text-decoration: none;
   font-size: 2vw;
   color: tomato;
-  font-weight: 300;
+  font-weight: 200;
 }
 
 .material-hamburger {
